--- a/template/template-react-components-ts/package.json
+++ b/template/template-react-components-ts/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "template-react-ts",
+	"name": "template-react-components-ts",
 	"version": "1.0.0",
 	"description": "",
 	"keywords": [],
