--- a/template/template-react-components/package.json
+++ b/template/template-react-components/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "template-react",
+    "name": "template-react-ts",
     "version": "1.0.0",
     "description": "",
     "keywords": [],
