--- a/template/node-server-egg/.editorconfig
+++ b/template/node-server-egg/.editorconfig
@@ -1,12 +1,17 @@
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
-
+# http://editorconfig.org
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-indent_size = 4
 indent_style = space
-insert_final_newline = true
+# 缩进4个空格
+indent_size = 4
+end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
