--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "br-example",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "百融云-fed-模板",
     "scripts": {
         "up": "npm version patch --no-git-tag"
@@ -18,5 +18,32 @@
     "homepage": "https://github.com/bairongyun/br-example#readme",
     "files": [
         "template"
+    ],
+    "templateList": [
+        {
+            "name": "node-server-egg",
+            "path": "https://github.com/bairongyun/br-example/tree/main/template/node-server-egg",
+            "descripition": "node端模板"
+        },
+        {
+            "name": "npm-module-browser",
+            "path": "https://github.com/bairongyun/br-example/tree/main/template/npm-module-browser",
+            "descripition": "npm模块"
+        },
+        {
+            "name": "react-ts",
+            "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ts",
+            "descripition": "react-ts"
+        },
+        {
+            "name": "react-ui-components-ts",
+            "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components-ts",
+            "descripition": "react-ui-components-ts"
+        },
+        {
+            "name": "react-ui-components",
+            "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components",
+            "descripition": "react-ui-components"
+        }
     ]
 }
