--- a/template/config.json
+++ b/template/config.json
@@ -1,32 +1,27 @@
 {
-    "test-template": {
-        "name": "test-template",
-        "path": "https://github.com/bairongyun/br-example/tree/main/template/test-template",
-        "descripition": "测试模板"
-    },
     "node-server-egg": {
         "name": "node-server-egg",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/node-server-egg",
-        "descripition": "node端模板"
+        "description": "node端模板"
     },
     "npm-module-browser": {
         "name": "npm-module-browser",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/npm-module-browser",
-        "descripition": "npm模块"
+        "description": "npm模块"
     },
     "react-ts": {
         "name": "react-ts",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ts",
-        "descripition": "react-ts"
+        "description": "react-ts"
     },
     "react-ui-components-ts": {
         "name": "react-ui-components-ts",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components-ts",
-        "descripition": "react-ui-components-ts"
+        "description": "react-ui-components-ts"
     },
     "react-ui-components": {
         "name": "react-ui-components",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components",
-        "descripition": "react-ui-components"
+        "description": "react-ui-components"
     }
 }
