--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
         {
             "name": "react-ts",
             "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ts",
-            "description": "React + TypeScript web工程"
+            "description": "React + TypeScript 通用模版"
         },
         {
             "name": "react-ui-components",
             "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components",
-            "description": "React UI组件"
+            "description": "React UI组件库通用模版"
         },
         {
             "name": "react-ui-components-ts",
             "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components-ts",
-            "description": "React UI组件（React + TypeScript）"
+            "description": "React UI组件库通用模版（TypeScript版）"
         },
         {
             "name": "node-server-egg",
             "path": "https://github.com/bairongyun/br-example/tree/main/template/node-server-egg",
-            "description": "Nodejs构建Server(egg + pm2)"
+            "description": "Node服务egg框架(egg + pm2)"
         },
         {
             "name": "npm-module-browser",
