--- a/template/config.json
+++ b/template/config.json
@@ -1,27 +1,27 @@
 {
-    "node-server-egg": {
-        "name": "node-server-egg",
-        "path": "https://github.com/bairongyun/br-example/tree/main/template/node-server-egg",
-        "description": "node端模板"
-    },
-    "npm-module-browser": {
-        "name": "npm-module-browser",
-        "path": "https://github.com/bairongyun/br-example/tree/main/template/npm-module-browser",
-        "description": "npm模块"
-    },
     "react-ts": {
         "name": "react-ts",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ts",
-        "description": "react-ts"
-    },
-    "react-ui-components-ts": {
-        "name": "react-ui-components-ts",
-        "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components-ts",
-        "description": "react-ui-components-ts"
+        "description": "React + TypeScript 通用模版"
     },
     "react-ui-components": {
         "name": "react-ui-components",
         "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components",
-        "description": "react-ui-components"
+        "description": "React UI组件通用模版"
+    },
+    "react-ui-components-ts": {
+        "name": "react-ui-components-ts",
+        "path": "https://github.com/bairongyun/br-example/tree/main/template/react-ui-components-ts",
+        "description": "React UI组件库通用模版（TypeScript版）"
+    },
+    "node-server-egg": {
+        "name": "node-server-egg",
+        "path": "https://github.com/bairongyun/br-example/tree/main/template/node-server-egg",
+        "description": "Node服务egg框架(egg + pm2)"
+    },
+    "npm-module-browser": {
+        "name": "npm-module-browser",
+        "path": "https://github.com/bairongyun/br-example/tree/main/template/npm-module-browser",
+        "description": "独立发布的npm包(浏览器版, 支持ES7语法)"
     }
 }
