--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
             "name": "npm-module-browser",
             "path": "https://github.com/bairongyun/br-example/tree/main/template/npm-module-browser",
             "description": "独立发布的npm包(浏览器版, 支持ES7语法)"
+        },
+        {
+            "name": "cms-antd-ts",
+            "path": "https://github.com/bairongyun/br-example/tree/main/template/cms-antd-ts",
+            "description": "内容管理系统(CMS), antd + TypeScript"
         }
     ]
 }
